WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287005
[Site Isolation] ProvisionalPageProxy should not reuse the main frame when its process does not already have a RemotePageProxy
https://bugs.webkit.org/show_bug.cgi?id=287005
Summary
[Site Isolation] ProvisionalPageProxy should not reuse the main frame when it...
Charlie Wolfe
Reported
2025-02-04 02:02:09 PST
Remove the last scenario where a main frame is unnecessarily being reused after a cross-site navigation, which is necessary to enable the back/forward cache with site isolation.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-04 02:02:22 PST
<
rdar://problem/144148232
>
Charlie Wolfe
Comment 2
2025-02-04 02:07:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39978
EWS
Comment 3
2025-02-04 13:34:05 PST
Committed
289823@main
(6620ec4e5d02): <
https://commits.webkit.org/289823@main
> Reviewed commits have been landed. Closing PR #39978 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug